--- a/index.html
+++ b/index.html
@@ -4,6 +4,29 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Steps of Us</title>
+    <style>
+        body {
+            background-color: #f5deb3; /* Bege */
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            margin: 0;
+            font-family: Arial, sans-serif;
+            text-align: center;
+        }
+        h1 {
+            font-size: 3em;
+            text-transform: uppercase;
+            font-weight: bold;
+            margin: 0;
+        }
+        p {
+            font-size: 1.5em;
+            margin-top: 10px;
+        }
+    </style>
 </head>
 <body>
     <h1>Steps of Us</h1>
