--- a/index.html
+++ b/index.html
@@ -1,35 +1,99 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Steps of Us</title>
-    <style>
-        body {
-            background-color: #f5deb3; /* Bege */
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            margin: 0;
-            font-family: Arial, sans-serif;
-            text-align: center;
-        }
-        h1 {
-            font-size: 3em;
-            text-transform: uppercase;
-            font-weight: bold;
-            margin: 0;
-        }
-        p {
-            font-size: 1.5em;
-            margin-top: 10px;
-        }
-    </style>
+  <meta charset="UTF-8">
+  <title>Memórias Interativas</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background: #f4f4f4;
+      margin: 0;
+      padding: 0;
+      text-align: center;
+    }
+    .section {
+      display: none;
+      padding: 20px;
+    }
+    .active {
+      display: block;
+    }
+    #videoContainer {
+      position: relative;
+      width: 100%;
+      max-width: 560px;
+      margin: 20px auto;
+    }
+    #startBtn {
+      margin-top: 20px;
+      padding: 10px 20px;
+      font-size: 1.1em;
+      cursor: pointer;
+    }
+    .quiz-container {
+      background: #fff;
+      max-width: 600px;
+      margin: 20px auto;
+      padding: 20px;
+      border-radius: 8px;
+      box-shadow: 0 2px 5px rgba(0,0,0,0.2);
+    }
+    .option {
+      background: #eaeaea;
+      padding: 10px;
+      margin: 10px 0;
+      cursor: pointer;
+      border-radius: 4px;
+    }
+    .option:hover {
+      background: #d4d4d4;
+    }
+  </style>
 </head>
 <body>
-    <h1>Steps of Us</h1>
-    <p>Coming soon...</p>
+  <!-- Seção do Vídeo -->
+  <div id="videoSection" class="section active">
+    <h1>Bem-vindo!</h1>
+    <div id="videoContainer">
+      <!-- Vídeo do YouTube -->
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/EkHTsc9PU2A?autoplay=1&controls=0" 
+              frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+    </div>
+    <button id="startBtn">Entrar no Jogo</button>
+  </div>
+
+  <!-- Seção do Jogo -->
+  <div id="gameSection" class="section">
+    <div class="quiz-container">
+      <h2>Quiz de Memórias</h2>
+      <!-- Exemplo de pergunta, substitua ou adicione novas perguntas conforme desejar -->
+      <p id="question">Qual foi o lugar do nosso primeiro encontro?</p>
+      <div class="option" onclick="checkAnswer(this, true)">Praça Central</div>
+      <div class="option" onclick="checkAnswer(this, false)">Shopping</div>
+      <div class="option" onclick="checkAnswer(this, false)">Cinema</div>
+      <div class="option" onclick="checkAnswer(this, false)">Restaurante</div>
+      <p id="result"></p>
+    </div>
+  </div>
+
+  <script>
+    // Troca da seção do vídeo para a do jogo quando o botão é clicado
+    document.getElementById('startBtn').addEventListener('click', function() {
+      document.getElementById('videoSection').classList.remove('active');
+      document.getElementById('gameSection').classList.add('active');
+    });
+
+    // Função simples para verificar a resposta do quiz
+    function checkAnswer(element, isCorrect) {
+      let resultEl = document.getElementById('result');
+      if (isCorrect) {
+        resultEl.textContent = "Acertou! Esse lugar é uma lembrança especial para nós.";
+        element.style.backgroundColor = '#a8e6a3';
+      } else {
+        resultEl.textContent = "Ops! Não é essa a resposta correta. Tente novamente.";
+        element.style.backgroundColor = '#f7a8a8';
+      }
+    }
+  </script>
 </body>
 </html>
