--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
     <h1>Steps Of Us</h1>
     <div class="question" id="question1">
-        <h2>1. Onde nos conhecemos pela primeira vez?</h2>
+        <h2>1. Onde nos conhecemos?</h2>
         <div class="options" id="options1"></div>
     </div>
 
@@ -80,7 +80,7 @@
     </div>
 
     <div class="question" id="question3" style="display: none;">
-        <h2>3. Qual é a nossa música favorita?</h2>
+        <h2>3. Qual é uma das nossas músicas favoritas?</h2>
         <div class="options" id="options3"></div>
     </div>
 
@@ -100,7 +100,7 @@
     </div>
 
     <div class="question" id="question7" style="display: none;">
-        <h2>7. Qual foi o nosso primeiro passeio no Porto?</h2>
+        <h2>7. Qual foi o nosso primeiro passeio juntos?</h2>
         <div class="options" id="options7"></div>
     </div>
 
@@ -110,17 +110,17 @@
     </div>
 
     <div class="question" id="question9" style="display: none;">
-        <h2>9. O que fizemos no nosso primeiro Dia dos Namorados juntos?</h2>
+        <h2>9. O que fizemos no nosso primeiro dia dos namorados juntos?</h2>
         <div class="options" id="options9"></div>
     </div>
 
     <div class="question" id="question10" style="display: none;">
-        <h2>10. Se fôssemos viajar hoje, para onde eu escolheria ir com você?</h2>
+        <h2>10. Se fôssemos viajar hoje, para onde iríamos?</h2>
         <div class="options" id="options10"></div>
     </div>
 
     <div class="result" id="result">
-        <h2>Parabéns! Você terminou o quiz!</h2>
+        <h2>Parabéns! Você é incrível! Eu te amo <3</h2>
         <p id="score">Você acertou X de 10 perguntas!</p>
     </div>
 
