--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             margin: 10px;
             border-radius: 10px;
             cursor: pointer;
-            width: 70%;
+            width: 40%;
             transition: background-color 0.3s ease, transform 0.2s ease;
             border: 1px solid #ccc;
         }
@@ -55,7 +55,7 @@
             display: none;
             margin-top: 20px;
             padding: 20px;
-            background-color: #fff;
+            background-color: #f5f5dc;
             border-radius: 10px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
         }
